front end connection and build complete

--- a/ArtistGallery/src/main/resources/static/index.html
+++ b/ArtistGallery/src/main/resources/static/index.html
@@ -1,45 +1,13 @@
-<!DOCTYPE html>
-<html>
+<!doctype html>
+<html lang="en">
 <head>
-<meta charset="UTF-8">
-<title>Artist Gallery</title>
-<script type="text/javascript" src="js/eventTracker.js"></script>
-</head>
+  <meta charset="utf-8">
+  <title>NgArtistGallery</title>
+  <base href="/ArtistGallery/">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="icon" type="image/x-icon" href="favicon.ico">
+<link rel="stylesheet" href="styles.3ff695c00d717f2d2a11.css"></head>
 <body>
-
-<h1>Artist Gallery Tracker</h1>
-<h2>Dope!</h2>
-
-<!-- <form name="artistForm">
-    <input type="number" name="artistId">
-    <button name="lookup">Get Artist by Id</button>
-  </form> -->
-  <!-- <form name="showArtists">
-      <ul>
-          <li *ngFor="let artists of artist">{{artists.id}}</li>
-          <li *ngFor="let artists of artist">{{artists.name}}</li>
-          <li *ngFor="let artists of artist">{{artists.birthYear}}</li>
-          <li *ngFor="let artists of artist">{{artists.deathYear}}</li>
-          <li *ngFor="let artists of artist">{{artists.artStyle}}</li>
-          <li *ngFor="let artists of artist">{{artists.listOfWork}}</li>
-      </ul>
-      
-  </form> -->
-  <div id="output">
-    <div id="artistData"></div>
-  </div>
-  <hr>
-  <form name="newArtistForm">
-    <input type="text" name="name" placeholder="Artist Name"> <br>
-    <input type="number" name="birthYear" placeholder="Birth Year"> <br>
-    <input type="number" name="deathYear" placeholder="Death Year"> <br>
-    <input type="text" name="artStyle" placeholder="Art Style"> <br>
-    <!-- <input type="text" name="imageUrl" placeholder="imageUrl"> <br> -->
-    <input type="text" name="listOfWork" placeholder="List of Work"> <br>
-    <button type="submit" name="submit">Add Artist</button>
-  </form>
-
-
-
-</body>
+  <app-root></app-root>
+<script src="runtime.359d5ee4682f20e936e9.js" defer></script><script src="polyfills.bf99d438b005d57b2b31.js" defer></script><script src="main.884e0280472534617b03.js" defer></script></body>
 </html>
